# P3ML

./: .gitignore  Taskfile.yml  meier_mod.py  memo.md  pyproject.toml  temp.py  test.css  test.html
data/arabidopsis/: data.csv
data/atlantis_silica/: data.csv
data/dia_hf/: data.csv
data/hela_deeprt/: data.csv
data/hela_lumos_1h/: data.csv
data/hela_lumos_2h/: data.csv
data/luna_hilic/: data.csv
data/luna_silica/: data.csv
data/pancreas/: data.csv
data/plasma_lumos_1h/: data.csv
data/plasma_lumos_2h/: data.csv
data/proteometools_ptm/: data.csv
data/schwanhausser/: raw.csv  test.csv
data/scx/: data.csv
data/test/: data.csv
data/twins/: _data.tsv  data.csv
data/xbridge/: data.csv
data/yeast_1h/: data.csv
data/yeast_2h/: data.csv
data/yeast_deeprt/: data.csv
src/main/: extraction.py  testing.py  training.py
src/main/analysis/: aggregate_hl_prediction.py  draw_scatter_hl_prediction.py  draw_scatter_hl_transfer_prediction.py  hl_histogram.py  maxmin_scatter_hl_prediction.py
src/main/exp/: EXP0001.py  EXP0001ccs-learn.py  EXP0001ccs-test.py  EXP0001rt.py  EXP0001test.py  EXP0002.py  EXP0002test.py  EXP0003.py  EXP0004.py  EXP0005.py  EXP0006.py  EXP0007.py
src/main/experiments/: EXP1-1.py  EXP1-2.py  EXP1.py  EXP10-1.py  EXP10-2.py  EXP11-1.py  EXP12-1.py  EXP13-1.py  EXP2-2.py  EXP2.py  EXP3-1.py  EXP3-2.py  EXP3.py  EXP4-1.py  EXP4-2.py  EXP4.py  EXP5-1.py  EXP5.py  EXP6.py  EXP7.py  EXP8.py  EXP9-1.py  EXP9-2.py  EXP9-3.py  EXP9-4.py  EXP9-5.py
src/modules/: slack_service.py
src/modules/helper/: helper.py
src/temp/: ext.py
(+67 files in other folders)
