[project]
name = "p3ml"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fair-esm>=2.0.0",
    "h5py>=3.14.0",
    "matplotlib>=3.10.6",
    "polars>=1.33.1",
    "pytorch-lightning>=2.5.5",
    "ruff>=0.13.1",
    "schedulefree>=1.4.1",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "torchmetrics>=1.8.2",
]

[tool.ruff.lint]
select = ["F", "I"]
ignore = ['E203']

[tool.ruff]
line-length = 120
